Robot Config and Manual Feedback

--- a/RobotArmUR2/App.config
+++ b/RobotArmUR2/App.config
@@ -18,29 +18,65 @@
   </runtime>
   <userSettings>
     <RobotArmUR2.Properties.Settings>
-      <setting name="Point0X" serializeAs="String">
+      <setting name="PaperPoint0X" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="Point0Y" serializeAs="String">
+      <setting name="PaperPoint0Y" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="Point1X" serializeAs="String">
+      <setting name="PaperPoint1X" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="Point1Y" serializeAs="String">
+      <setting name="PaperPoint1Y" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="Point2X" serializeAs="String">
+      <setting name="PaperPoint2X" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="Point2Y" serializeAs="String">
+      <setting name="PaperPoint2Y" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="Point3X" serializeAs="String">
+      <setting name="PaperPoint3X" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="Point3Y" serializeAs="String">
+      <setting name="PaperPoint3Y" serializeAs="String">
         <value>1</value>
+      </setting>
+      <setting name="BLRobotRotation" serializeAs="String">
+        <value>54.6375</value>
+      </setting>
+      <setting name="BLRobotDistance" serializeAs="String">
+        <value>241.38356</value>
+      </setting>
+      <setting name="TLRobotRotation" serializeAs="String">
+        <value>71.301</value>
+      </setting>
+      <setting name="TLRobotDistance" serializeAs="String">
+        <value>435.7497</value>
+      </setting>
+      <setting name="TRRobotRotation" serializeAs="String">
+        <value>108.699</value>
+      </setting>
+      <setting name="TRRobotDistance" serializeAs="String">
+        <value>435.7497</value>
+      </setting>
+      <setting name="BRRobotRotation" serializeAs="String">
+        <value>125.362</value>
+      </setting>
+      <setting name="BRRobotDistance" serializeAs="String">
+        <value>241.38356</value>
+      </setting>
+      <setting name="LeftPileAngle" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="LeftPileDistance" serializeAs="String">
+        <value>304.8</value>
+      </setting>
+      <setting name="RightPileAngle" serializeAs="String">
+        <value>180</value>
+      </setting>
+      <setting name="RightPileDistance" serializeAs="String">
+        <value>304.8</value>
       </setting>
     </RobotArmUR2.Properties.Settings>
   </userSettings>
