Added Prescale option

--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Robot Commands\GetExtensionCommand.cs" />
     <Compile Include="Robot Commands\GetRotationCommand.cs" />
     <Compile Include="Robot Commands\GoToHomeCommand.cs" />
+    <Compile Include="Robot Commands\SetPrescaleCommand.cs" />
     <Compile Include="Robot Commands\SetTargetAngleCommand.cs" />
     <Compile Include="Robot Commands\SetTargetDistanceCommand.cs" />
     <Compile Include="Robot Commands\StartMoveCommand.cs" />
