Saved speed/prescale + added shape stack calibration

--- a/RobotArmUR2/App.config
+++ b/RobotArmUR2/App.config
@@ -66,17 +66,23 @@
       <setting name="BRRobotDistance" serializeAs="String">
         <value>241.38356</value>
       </setting>
-      <setting name="LeftPileAngle" serializeAs="String">
+      <setting name="TrianglePileAngle" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="LeftPileDistance" serializeAs="String">
+      <setting name="TrianglePileDistance" serializeAs="String">
         <value>304.8</value>
       </setting>
-      <setting name="RightPileAngle" serializeAs="String">
+      <setting name="SquarePileAngle" serializeAs="String">
         <value>180</value>
       </setting>
-      <setting name="RightPileDistance" serializeAs="String">
+      <setting name="SquarePileDistance" serializeAs="String">
         <value>304.8</value>
+      </setting>
+      <setting name="RobotSpeed" serializeAs="String">
+        <value>100</value>
+      </setting>
+      <setting name="RobotPrescale" serializeAs="String">
+        <value>0</value>
       </setting>
     </RobotArmUR2.Properties.Settings>
   </userSettings>
