--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="RobotHelpers\InputHandling\CameraInput.cs" />
+    <Compile Include="RobotHelpers\InputHandling\FileInput.cs" />
     <Compile Include="RobotHelpers\InputHandling\ImageInput.cs" />
     <Compile Include="RobotHelpers\InputHandling\InputHandler.cs" />
     <Compile Include="RobotHelpers\InputHandling\VideoInput.cs" />
@@ -106,7 +107,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="RobotHelpers\Serial\SerialCommunicator.cs" />
-    <Compile Include="Vision.cs" />
+    <Compile Include="VisionProcessing\ImageProcessing.cs" />
+    <Compile Include="VisionProcessing\Vision.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
