--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -33,6 +33,26 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Emgu.CV.UI, Version=3.4.1.2976, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\EMGU.CV.3.4.1.2976\lib\net35\Emgu.CV.UI.dll</HintPath>
@@ -82,13 +102,14 @@
     <Compile Include="RobotCalibrater.Designer.cs">
       <DependentUpon>RobotCalibrater.cs</DependentUpon>
     </Compile>
-    <Compile Include="RobotHelpers\ControlHelpers.cs" />
+    <Compile Include="RobotHelpers\ControlHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="RobotHelpers\FPSCounter.cs" />
     <Compile Include="RobotHelpers\InputHandling\CameraInput.cs" />
     <Compile Include="RobotHelpers\InputHandling\FileInput.cs" />
     <Compile Include="RobotHelpers\InputHandling\ImageInput.cs" />
@@ -108,7 +129,9 @@
     <Compile Include="Robot.cs" />
     <Compile Include="RobotHelpers\Serial\SerialCommunicator.cs" />
     <Compile Include="VisionProcessing\ImageProcessing.cs" />
+    <Compile Include="VisionProcessing\PaperCalibration.cs" />
     <Compile Include="VisionProcessing\Vision.cs" />
+    <Compile Include="VisionProcessing\VisionUI.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
