--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -86,12 +86,9 @@
     <Compile Include="Robot Commands\MoveToCommand.cs" />
     <Compile Include="Robot Commands\MoveToWaitCommand.cs" />
     <Compile Include="Robot Commands\SetMagnetCommand.cs" />
-    <Compile Include="Robot Commands\SetPrescaleCommand.cs" />
-    <Compile Include="Robot Commands\SetTargetAngleCommand.cs" />
-    <Compile Include="Robot Commands\SetTargetDistanceCommand.cs" />
-    <Compile Include="Robot Commands\StartMoveCommand.cs" />
-    <Compile Include="Robot Commands\UpdateSpeedCommand.cs" />
+    <Compile Include="Robot Commands\ManualMoveCommand.cs" />
     <Compile Include="Robot Programs\CalibrationProgram.cs" />
+    <Compile Include="Robot Programs\MoveToWait.cs" />
     <Compile Include="Robot Programs\MoveToPosProgram.cs" />
     <Compile Include="Robot Programs\ReturnHomeProgram.cs" />
     <Compile Include="Robot Programs\StackingProgram.cs" />
