--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationSettings.cs" />
     <Compile Include="EmguPictureBox.cs" />
     <Compile Include="Robot Commands\EndMoveCommand.cs" />
     <Compile Include="Robot Commands\GetExtensionCommand.cs" />
@@ -105,6 +106,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="RobotCalibration.cs" />
+    <Compile Include="RobotCalibrationPoint.cs" />
     <Compile Include="RobotHelpers\FPSCounter.cs" />
     <Compile Include="RobotHelpers\InputHandling\CameraInput.cs" />
     <Compile Include="RobotHelpers\InputHandling\FileInput.cs" />
@@ -125,6 +127,7 @@
     <Compile Include="Robot.cs" />
     <Compile Include="RobotHelpers\Serial\SerialCommunicator.cs" />
     <Compile Include="RobotInterface.cs" />
+    <Compile Include="RobotPoint.cs" />
     <Compile Include="RobotProgram.cs" />
     <Compile Include="RobotUI.cs" />
     <Compile Include="VisionProcessing\PaperCalibration.cs" />
