Changed a few property names

--- a/RobotArmUR2/App.config
+++ b/RobotArmUR2/App.config
@@ -45,37 +45,37 @@
       <setting name="BLRobotRotation" serializeAs="String">
         <value>54.6375</value>
       </setting>
-      <setting name="BLRobotDistance" serializeAs="String">
+      <setting name="BLRobotExtension" serializeAs="String">
         <value>241.38356</value>
       </setting>
       <setting name="TLRobotRotation" serializeAs="String">
         <value>71.301</value>
       </setting>
-      <setting name="TLRobotDistance" serializeAs="String">
+      <setting name="TLRobotExtension" serializeAs="String">
         <value>435.7497</value>
       </setting>
       <setting name="TRRobotRotation" serializeAs="String">
         <value>108.699</value>
       </setting>
-      <setting name="TRRobotDistance" serializeAs="String">
+      <setting name="TRRobotExtension" serializeAs="String">
         <value>435.7497</value>
       </setting>
       <setting name="BRRobotRotation" serializeAs="String">
         <value>125.362</value>
       </setting>
-      <setting name="BRRobotDistance" serializeAs="String">
+      <setting name="BRRobotExtension" serializeAs="String">
         <value>241.38356</value>
       </setting>
-      <setting name="TrianglePileAngle" serializeAs="String">
+      <setting name="TriangleStackRotation" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="TrianglePileDistance" serializeAs="String">
+      <setting name="TriangleStackExtension" serializeAs="String">
         <value>304.8</value>
       </setting>
-      <setting name="SquarePileAngle" serializeAs="String">
+      <setting name="SquareStackRotation" serializeAs="String">
         <value>180</value>
       </setting>
-      <setting name="SquarePileDistance" serializeAs="String">
+      <setting name="SquareStackExtension" serializeAs="String">
         <value>304.8</value>
       </setting>
       <setting name="RobotSpeed" serializeAs="String">
