--- a/RobotArmUR2/Properties/Settings.settings
+++ b/RobotArmUR2/Properties/Settings.settings
@@ -29,37 +29,37 @@
     <Setting Name="BLRobotRotation" Type="System.Single" Scope="User">
       <Value Profile="(Default)">54.6375</Value>
     </Setting>
-    <Setting Name="BLRobotDistance" Type="System.Single" Scope="User">
+    <Setting Name="BLRobotExtension" Type="System.Single" Scope="User">
       <Value Profile="(Default)">241.38356</Value>
     </Setting>
     <Setting Name="TLRobotRotation" Type="System.Single" Scope="User">
       <Value Profile="(Default)">71.301</Value>
     </Setting>
-    <Setting Name="TLRobotDistance" Type="System.Single" Scope="User">
+    <Setting Name="TLRobotExtension" Type="System.Single" Scope="User">
       <Value Profile="(Default)">435.7497</Value>
     </Setting>
     <Setting Name="TRRobotRotation" Type="System.Single" Scope="User">
       <Value Profile="(Default)">108.699</Value>
     </Setting>
-    <Setting Name="TRRobotDistance" Type="System.Single" Scope="User">
+    <Setting Name="TRRobotExtension" Type="System.Single" Scope="User">
       <Value Profile="(Default)">435.7497</Value>
     </Setting>
     <Setting Name="BRRobotRotation" Type="System.Single" Scope="User">
       <Value Profile="(Default)">125.362</Value>
     </Setting>
-    <Setting Name="BRRobotDistance" Type="System.Single" Scope="User">
+    <Setting Name="BRRobotExtension" Type="System.Single" Scope="User">
       <Value Profile="(Default)">241.38356</Value>
     </Setting>
-    <Setting Name="TrianglePileAngle" Type="System.Single" Scope="User">
+    <Setting Name="TriangleStackRotation" Type="System.Single" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="TrianglePileDistance" Type="System.Single" Scope="User">
+    <Setting Name="TriangleStackExtension" Type="System.Single" Scope="User">
       <Value Profile="(Default)">304.8</Value>
     </Setting>
-    <Setting Name="SquarePileAngle" Type="System.Single" Scope="User">
+    <Setting Name="SquareStackRotation" Type="System.Single" Scope="User">
       <Value Profile="(Default)">180</Value>
     </Setting>
-    <Setting Name="SquarePileDistance" Type="System.Single" Scope="User">
+    <Setting Name="SquareStackExtension" Type="System.Single" Scope="User">
       <Value Profile="(Default)">304.8</Value>
     </Setting>
     <Setting Name="RobotSpeed" Type="System.Int32" Scope="User">
