--- a/RobotArmUR2/App.config
+++ b/RobotArmUR2/App.config
@@ -18,28 +18,28 @@
   </runtime>
   <userSettings>
     <RobotArmUR2.Properties.Settings>
-      <setting name="PaperPoint0X" serializeAs="String">
+      <setting name="PaperPointBLX" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="PaperPoint0Y" serializeAs="String">
-        <value>0</value>
-      </setting>
-      <setting name="PaperPoint1X" serializeAs="String">
+      <setting name="PaperPointBLY" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="PaperPoint1Y" serializeAs="String">
+      <setting name="PaperPointTLX" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="PaperPoint2X" serializeAs="String">
-        <value>1</value>
-      </setting>
-      <setting name="PaperPoint2Y" serializeAs="String">
-        <value>1</value>
-      </setting>
-      <setting name="PaperPoint3X" serializeAs="String">
+      <setting name="PaperPointTLY" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="PaperPoint3Y" serializeAs="String">
+      <setting name="PaperPointTRX" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="PaperPointTRY" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="PaperPointBRX" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="PaperPointBRY" serializeAs="String">
         <value>1</value>
       </setting>
       <setting name="BLRobotRotation" serializeAs="String">
