--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -128,6 +128,7 @@
     <Compile Include="RobotPoint.cs" />
     <Compile Include="RobotProgram.cs" />
     <Compile Include="RobotUI.cs" />
+    <Compile Include="VisionProcessing\ImageProcessing.cs" />
     <Compile Include="VisionProcessing\PaperCalibration.cs" />
     <Compile Include="VisionProcessing\PaperCalibrationPoint.cs" />
     <Compile Include="VisionProcessing\PaperPoint.cs" />
