--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -78,19 +78,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationSettings.cs" />
-    <Compile Include="Setting.cs" />
-    <Compile Include="EmguPictureBox.cs" />
-    <Compile Include="Robot Commands\EndMoveCommand.cs" />
-    <Compile Include="Robot Commands\GetExtensionCommand.cs" />
-    <Compile Include="Robot Commands\GetRotationCommand.cs" />
-    <Compile Include="Robot Commands\GoToHomeCommand.cs" />
-    <Compile Include="Robot Commands\MoveServoCommand.cs" />
-    <Compile Include="Robot Commands\MoveToCommand.cs" />
-    <Compile Include="Robot Commands\MoveToWaitCommand.cs" />
-    <Compile Include="Robot Commands\SetMagnetCommand.cs" />
-    <Compile Include="Robot Commands\ManualMoveCommand.cs" />
-    <Compile Include="Robot Programs\ReturnHomeProgram.cs" />
-    <Compile Include="Robot Programs\StackingProgram.cs" />
+    <Compile Include="Util\Setting.cs" />
+    <Compile Include="Util\EmguPictureBox.cs" />
+    <Compile Include="Robot\Commands\EndMoveCommand.cs" />
+    <Compile Include="Robot\Commands\GetExtensionCommand.cs" />
+    <Compile Include="Robot\Commands\GetRotationCommand.cs" />
+    <Compile Include="Robot\Commands\GoToHomeCommand.cs" />
+    <Compile Include="Robot\Commands\MoveServoCommand.cs" />
+    <Compile Include="Robot\Commands\MoveToCommand.cs" />
+    <Compile Include="Robot\Commands\MoveToWaitCommand.cs" />
+    <Compile Include="Robot\Commands\SetMagnetCommand.cs" />
+    <Compile Include="Robot\Commands\ManualMoveCommand.cs" />
+    <Compile Include="Robot\Programs\ReturnHomeProgram.cs" />
+    <Compile Include="Robot\Programs\StackingProgram.cs" />
     <Compile Include="RobotCalibrater.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,17 +103,17 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="RobotCalibration.cs" />
-    <Compile Include="RobotCalibrationPoint.cs" />
-    <Compile Include="RobotHelpers\FPSCounter.cs" />
-    <Compile Include="RobotHelpers\InputHandling\CameraInput.cs" />
-    <Compile Include="RobotHelpers\InputHandling\FileInput.cs" />
-    <Compile Include="RobotHelpers\InputHandling\ImageInput.cs" />
-    <Compile Include="RobotHelpers\InputHandling\InputHandler.cs" />
-    <Compile Include="RobotHelpers\InputHandling\VideoInput.cs" />
-    <Compile Include="RobotHelpers\Serial\SerialCommand.cs" />
-    <Compile Include="RobotHelpers\Serial\SerialResponse.cs" />
-    <Compile Include="RobotHelpers\Serial\SerialUIListener.cs" />
+    <Compile Include="Robot\RobotCalibration.cs" />
+    <Compile Include="Robot\RobotCalibrationPoint.cs" />
+    <Compile Include="Util\FPSCounter.cs" />
+    <Compile Include="Util\InputHandling\CameraInput.cs" />
+    <Compile Include="Util\InputHandling\FileInput.cs" />
+    <Compile Include="Util\InputHandling\ImageInput.cs" />
+    <Compile Include="Util\InputHandling\InputHandler.cs" />
+    <Compile Include="Util\InputHandling\VideoInput.cs" />
+    <Compile Include="Util\Serial\SerialCommand.cs" />
+    <Compile Include="Util\Serial\SerialResponse.cs" />
+    <Compile Include="Util\Serial\SerialUIListener.cs" />
     <Compile Include="PaperCalibrater.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,12 +122,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Robot.cs" />
-    <Compile Include="RobotHelpers\Serial\SerialCommunicator.cs" />
-    <Compile Include="RobotInterface.cs" />
-    <Compile Include="RobotPoint.cs" />
-    <Compile Include="RobotProgram.cs" />
-    <Compile Include="RobotUI.cs" />
+    <Compile Include="Robot\Robot.cs" />
+    <Compile Include="Util\Serial\SerialCommunicator.cs" />
+    <Compile Include="Robot\RobotInterface.cs" />
+    <Compile Include="Robot\RobotPoint.cs" />
+    <Compile Include="Robot\RobotProgram.cs" />
+    <Compile Include="Robot\RobotUI.cs" />
     <Compile Include="VisionProcessing\DetectedShapes.cs" />
     <Compile Include="VisionProcessing\ImageProcessing.cs" />
     <Compile Include="VisionProcessing\PaperCalibration.cs" />
