--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -78,20 +78,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationSettings.cs" />
-    <Compile Include="Robot\Commands\GetPositionCommand.cs" />
+    <Compile Include="RobotControl\Commands\GetPositionCommand.cs" />
     <Compile Include="Util\Setting.cs" />
     <Compile Include="Util\EmguPictureBox.cs" />
-    <Compile Include="Robot\Commands\EndMoveCommand.cs" />
-    <Compile Include="Robot\Commands\GetExtensionCommand.cs" />
-    <Compile Include="Robot\Commands\GetRotationCommand.cs" />
-    <Compile Include="Robot\Commands\GoToHomeCommand.cs" />
-    <Compile Include="Robot\Commands\MoveServoCommand.cs" />
-    <Compile Include="Robot\Commands\MoveToCommand.cs" />
-    <Compile Include="Robot\Commands\MoveToWaitCommand.cs" />
-    <Compile Include="Robot\Commands\SetMagnetCommand.cs" />
-    <Compile Include="Robot\Commands\ManualMoveCommand.cs" />
-    <Compile Include="Robot\Programs\ReturnHomeProgram.cs" />
-    <Compile Include="Robot\Programs\StackingProgram.cs" />
+    <Compile Include="RobotControl\Commands\EndMoveCommand.cs" />
+    <Compile Include="RobotControl\Commands\GoToHomeCommand.cs" />
+    <Compile Include="RobotControl\Commands\MoveServoCommand.cs" />
+    <Compile Include="RobotControl\Commands\MoveToCommand.cs" />
+    <Compile Include="RobotControl\Commands\MoveToWaitCommand.cs" />
+    <Compile Include="RobotControl\Commands\SetMagnetCommand.cs" />
+    <Compile Include="RobotControl\Commands\ManualMoveCommand.cs" />
+    <Compile Include="RobotControl\Programs\ReturnHomeProgram.cs" />
+    <Compile Include="RobotControl\Programs\StackingProgram.cs" />
     <Compile Include="RobotCalibrater.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,8 +102,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Robot\RobotCalibration.cs" />
-    <Compile Include="Robot\RobotCalibrationPoint.cs" />
+    <Compile Include="RobotControl\RobotCalibration.cs" />
+    <Compile Include="RobotControl\RobotCalibrationPoint.cs" />
     <Compile Include="Util\FPSCounter.cs" />
     <Compile Include="Util\InputHandling\CameraInput.cs" />
     <Compile Include="Util\InputHandling\FileInput.cs" />
@@ -121,12 +119,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Robot\Robot.cs" />
+    <Compile Include="RobotControl\Robot.cs" />
     <Compile Include="Util\Serial\SerialCommunicator.cs" />
-    <Compile Include="Robot\RobotInterface.cs" />
-    <Compile Include="Robot\RobotPoint.cs" />
-    <Compile Include="Robot\RobotProgram.cs" />
-    <Compile Include="Robot\RobotUI.cs" />
+    <Compile Include="RobotControl\RobotInterface.cs" />
+    <Compile Include="RobotControl\RobotPoint.cs" />
+    <Compile Include="RobotControl\RobotProgram.cs" />
     <Compile Include="VisionProcessing\DetectedShapes.cs" />
     <Compile Include="VisionProcessing\ImageProcessing.cs" />
     <Compile Include="VisionProcessing\PaperCalibration.cs" />
