Added Base/Carriage Prescale, added RobotSettings window

--- a/RobotArmUR2/App.config
+++ b/RobotArmUR2/App.config
@@ -78,10 +78,10 @@
       <setting name="SquareStackExtension" serializeAs="String">
         <value>304.8</value>
       </setting>
-      <setting name="RobotSpeed" serializeAs="String">
-        <value>100</value>
+      <setting name="BasePrescale" serializeAs="String">
+        <value>15</value>
       </setting>
-      <setting name="RobotPrescale" serializeAs="String">
+      <setting name="CarriagePrescale" serializeAs="String">
         <value>0</value>
       </setting>
     </RobotArmUR2.Properties.Settings>
