--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -109,8 +109,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="RobotControl\RobotCalibration.cs" />
-    <Compile Include="RobotControl\RobotCalibrationPoint.cs" />
+    <Compile Include="Util\Calibration\Robot\RobotCalibration.cs" />
+    <Compile Include="Util\Calibration\Robot\RobotCalibrationPoint.cs" />
     <Compile Include="Util\FPSCounter.cs" />
     <Compile Include="Util\InputHandling\CameraInput.cs" />
     <Compile Include="Util\InputHandling\FileInput.cs" />
@@ -129,13 +129,13 @@
     <Compile Include="RobotControl\Robot.cs" />
     <Compile Include="Util\Serial\SerialCommunicator.cs" />
     <Compile Include="RobotControl\RobotInterface.cs" />
-    <Compile Include="RobotControl\RobotPoint.cs" />
+    <Compile Include="Util\RobotPoint.cs" />
     <Compile Include="RobotControl\RobotProgram.cs" />
     <Compile Include="VisionProcessing\DetectedShapes.cs" />
     <Compile Include="VisionProcessing\ImageProcessing.cs" />
-    <Compile Include="VisionProcessing\PaperCalibration.cs" />
-    <Compile Include="VisionProcessing\PaperCalibrationPoint.cs" />
-    <Compile Include="VisionProcessing\PaperPoint.cs" />
+    <Compile Include="Util\Calibration\Paper\PaperCalibration.cs" />
+    <Compile Include="Util\Calibration\Paper\PaperCalibrationPoint.cs" />
+    <Compile Include="Util\PaperPoint.cs" />
     <Compile Include="VisionProcessing\Vision.cs" />
     <Compile Include="VisionProcessing\VisionUI.cs" />
     <EmbeddedResource Include="Form1.resx">
