--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -80,10 +80,10 @@
     <Compile Include="ApplicationSettings.cs" />
     <Compile Include="RobotControl\Commands\GetPositionCommand.cs" />
     <Compile Include="RobotControl\Commands\SetPrescaleCommand.cs" />
-    <Compile Include="RobotSettings.cs">
+    <Compile Include="Util\Calibration\RobotSettings.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RobotSettings.Designer.cs">
+    <Compile Include="Util\Calibration\RobotSettings.Designer.cs">
       <DependentUpon>RobotSettings.cs</DependentUpon>
     </Compile>
     <Compile Include="Util\Setting.cs" />
@@ -97,10 +97,10 @@
     <Compile Include="RobotControl\Commands\ManualMoveCommand.cs" />
     <Compile Include="RobotControl\Programs\ReturnHomeProgram.cs" />
     <Compile Include="RobotControl\Programs\StackingProgram.cs" />
-    <Compile Include="RobotCalibrater.cs">
+    <Compile Include="Util\Calibration\Robot\RobotCalibrater.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RobotCalibrater.Designer.cs">
+    <Compile Include="Util\Calibration\Robot\RobotCalibrater.Designer.cs">
       <DependentUpon>RobotCalibrater.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -118,10 +118,10 @@
     <Compile Include="Util\InputHandling\InputHandler.cs" />
     <Compile Include="Util\InputHandling\VideoInput.cs" />
     <Compile Include="Util\Serial\SerialCommand.cs" />
-    <Compile Include="PaperCalibrater.cs">
+    <Compile Include="Util\Calibration\Paper\PaperCalibrater.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PaperCalibrater.Designer.cs">
+    <Compile Include="Util\Calibration\Paper\PaperCalibrater.Designer.cs">
       <DependentUpon>PaperCalibrater.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -137,11 +137,10 @@
     <Compile Include="Util\Calibration\Paper\PaperCalibrationPoint.cs" />
     <Compile Include="Util\PaperPoint.cs" />
     <Compile Include="VisionProcessing\Vision.cs" />
-    <Compile Include="VisionProcessing\VisionUI.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PaperCalibrater.resx">
+    <EmbeddedResource Include="Util\Calibration\Paper\PaperCalibrater.resx">
       <DependentUpon>PaperCalibrater.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -154,10 +153,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="RobotCalibrater.resx">
+    <EmbeddedResource Include="Util\Calibration\Robot\RobotCalibrater.resx">
       <DependentUpon>RobotCalibrater.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="RobotSettings.resx">
+    <EmbeddedResource Include="Util\Calibration\RobotSettings.resx">
       <DependentUpon>RobotSettings.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
