--- a/RobotArmUR2/RobotArmUR2.csproj
+++ b/RobotArmUR2/RobotArmUR2.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Util\Calibration\Paper\PaperCalibration.cs" />
     <Compile Include="Util\Calibration\Paper\PaperCalibrationPoint.cs" />
     <Compile Include="Util\PaperPoint.cs" />
+    <Compile Include="VisionProcessing\SelectablePictureBox.cs" />
     <Compile Include="VisionProcessing\Vision.cs" />
     <Compile Include="VisionProcessing\VisionImages.cs" />
     <EmbeddedResource Include="Form1.resx">
